repos/makepy/contents/test/fail/ForMalformed.rules
for x y z w:
    x = z

all: